--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select id="priority" >
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
+      <label for="new-task-due-date">Due date:</label>
+      <input type="text" id="due-date" name="due-date" placeholder="due date">>
       <input type="submit" value="Create New Task">
     </form>
 
