--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <option value="low">Low</option>
       </select>
       <label for="new-task-due-date">Due date:</label>
-      <input type="text" id="due-date" name="due-date" placeholder="due date">>
+      <input type="text" id="due-date" name="due-date" placeholder="due date">
       <input type="submit" value="Create New Task">
     </form>
 
